# VitaArc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
livearea/: template.xml
src/: main.c
src/bridges/: androidlog.c  androidndk.c  androidndk.h  cocos2dx.c  cocos2dx.h  eabi.c  jni.c  jni.h  opengl.c  opengl.h
src/bridges/android/: CMakeLists.txt  android.c  android.h  log.c  log.h  logimpl.h  ndk.c  ndkimpl.h
src/bridges/android/impl/: assetmgr.c  assetmgr.h  log.c  log.h
src/bridges/audio/: CMakeLists.txt  audio.c  audio.h
src/bridges/audio/impl/: provider.c  provider.h
src/bridges/cocos2dx/: CMakeLists.txt  cocos2dx.c  cocos2dx.h
src/bridges/eabi/: CMakeLists.txt  eabi.c  eabi.h  eabiimpl.h
src/bridges/jni/: CMakeLists.txt  jni.c  jni.h
src/bridges/jni/impl/: cocos.c  cocos.h  jni.c  jni.h  jvm.c  jvm.h
src/bridges/jni/impl/android/: jni.h
src/bridges/libc/: CMakeLists.txt  libc.c  libc.h  libcimpl.h  pthread.c  pthread.h
src/bridges/libc/bionic/: __memcpy_chk.cpp  __memmove_chk.cpp
src/bridges/libc/impl/: libc.c  libc.h  pthread.c  pthread.h
src/bridges/libc/impl/bionic/: __memset_chk.cpp  __strchr_chk.cpp  bionic.h  (+4 more)
src/bridges/opengl/: CMakeLists.txt  opengl.c  openglimpl.c  openglimpl.h
src/bridges/opengl/impl/: opengl.c  opengl.h
src/common/: define.h  defines.h  elf.h  types.h
src/logcat/: CMakeLists.txt  logcat.c  logcat.h
src/solibrary/: CMakeLists.txt  internal.h  solib.c  solib.h
src/utils/: CMakeLists.txt  debug.c  debug.h  fs.c  fs.h  kubridge.c  kubridge.h  patcher.c  patcher.h  string.c  string.h
